refactor: simple_get_with_body handler returns correct response