@@ -5,27 +5,24 @@ import org.httpserver.response.Response;
 import org.httpserver.response.ResponseBuilder;
 import org.httpserver.server.HttpMethod;
 
-import java.util.Arrays;
 import java.util.List;
 
-public class MethodNotAllowedHandler implements Handler{
+public class SimpleGetWithBodyHandler implements Handler {
     @Override
     public List<String> allowedHttpMethods() {
-        return Arrays.asList(HttpMethod.HEAD, HttpMethod.OPTIONS);
+        return List.of(HttpMethod.GET);
     }
 
-    @Override
     public Response responseBuilder(Request request) {
         String SP = " ";
         String CRLF = "\r\n";
-        String statusCode = "405";
-        String statusText = "Method Not Allowed";
+        String statusCode = "200";
+        String statusText = "OK";
         String responseStatusLine = request.getHttpVersion() + SP + statusCode + SP + statusText + CRLF;
-        String responseHeaders = "Allow: " + allowedHttpMethods().toString() +  CRLF;
-        String responseBody = "";
+        String responseHeaders = "" + CRLF;
+        String responseBody = "Hello world";
 
         ResponseBuilder responseBuilder = new ResponseBuilder();
-
         responseBuilder.setResponseStatusLine(responseStatusLine);
         responseBuilder.setResponseHeaders(responseHeaders);
         responseBuilder.setResponseBody(responseBody);
